--- a/portfolio.html
+++ b/portfolio.html
@@ -79,93 +79,107 @@
         <ul class="list">
           <!--Перший пункт другого списку-->
           <li class="link">
-            <img
-              src="./images/images/img8.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-            />
-            <h2 class="project-text">Banking App Interface Concept</h2>
-            <p class="project-card-text">App</p>
+            <a href="">
+              <img
+                src="./images/images/img8.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+              />
+              <h2 class="project-text">Banking App Interface Concept</h2>
+              <p class="project-card-text">App</p>
+            </a>
           </li>
           <!--Другий пункт другого списку-->
           <li class="link">
-            <img
-              src="./images/images/img9.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h2 class="project-text">Cashless Payment</h2>
-            <p class="project-card-text">Marketing</p>
+            <a href="">
+              <img
+                src="./images/images/img9.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h2 class="project-text">Cashless Payment</h2>
+              <p class="project-card-text">Marketing</p>
+            </a>
           </li>
           <!--Третій пункт другого списку-->
           <li class="link">
-            <img
-              src="./images/images/img10.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h2 class="project-text">Meditation App</h2>
-            <p class="project-card-text">App</p>
+            <a href="">
+              <img
+                src="./images/images/img10.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h2 class="project-text">Meditation App</h2>
+              <p class="project-card-text">App</p>
+            </a>
           </li>
           <!--Четвертий пункт другого списку-->
           <li class="link">
-            <img
-              src="./images/images/img11.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h2 class="project-text">Taxi Service</h2>
-            <p class="project-card-text">Marketing</p>
+            <a href="">
+              <img
+                src="./images/images/img11.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <h2 class="project-text">Taxi Service</h2>
+              <p class="project-card-text">Marketing</p>
+            </a>
           </li>
           <!--П'ятий пункт другого списку-->
           <li class="link">
-            <img
-              src="./images/images/img12.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h2 class="project-text">Screen Illustrations</h2>
-            <p class="project-card-text">Design</p>
+            <a href="">
+              <img
+                src="./images/images/img12.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h2 class="project-text">Screen Illustrations</h2>
+              <p class="project-card-text">Design</p>
+            </a>
           </li>
           <!--Шостий пункт другого списку-->
           <li class="link">
-            <img
-              src="./images/images/img13.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h2 class="project-text">Online Courses</h2>
-            <p class="project-card-text">Marketing</p>
+            <a href="">
+              <img
+                src="./images/images/img13.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h2 class="project-text">Online Courses</h2>
+              <p class="project-card-text">Marketing</p>
+            </a>
           </li>
           <!--Сьомий пункт другого списку-->
           <li class="link">
-            <img
-              src="./images/images/img14.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-            />
-            <h2 class="project-text">Instagram Stories Concept</h2>
-            <p class="project-card-text">Design</p>
+            <a href="">
+              <img
+                src="./images/images/img14.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+              />
+              <h2 class="project-text">Instagram Stories Concept</h2>
+              <p class="project-card-text">Design</p>
+            </a>
           </li>
           <!--Восьмий пункт другого списку-->
           <li class="link">
-            <img
-              src="./images/images/img15.jpg"
-              alt="Organic Food"
-              width="360"
-            />
-            <h2 class="project-text">Organic Food</h2>
-            <p class="project-card-text">Web Site</p>
+            <a href="">
+              <img src="./images/images/img15.jpg" alt="" width="360" />
+              <h2 class="project-text">Organic Food</h2>
+              <p class="project-card-text">Web Site</p>
+            </a>
           </li>
           <!--Дев'ятий пункт другого списку-->
           <li class="link">
-            <img
-              src="./images/images/img16.jpg"
-              alt="the process of making coffee"
-              width="360"
-            />
-            <h2 class="project-text">Fresh Coffee</h2>
-            <p class="project-card-text">Web Site</p>
+            <a href="">
+              <img
+                src="./images/images/img16.jpg"
+                alt="the process of making coffee"
+                width="360"
+              />
+              <h2 class="project-text">Fresh Coffee</h2>
+              <p class="project-card-text">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
